<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    android:padding="10sp"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateAccountActivity"
    tools:showIn="@layout/activity_create_account">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/create_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/create_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_user_inf"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <EditText
                android:id="@+id/editEmail"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/e_mail_address"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/editConfirmEmail"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_e_mail_address"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/display_name_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_must_contain_a_letter"
                android:textAllCaps="false"
                android:textColor="#E90808"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/editConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/passwordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_must_contain_a_letter"
                android:textAllCaps="false"
                android:textColor="#E90808"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/saveChanges"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="Register"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>