<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    android:padding="10sp"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".edit_display_details"
    tools:showIn="@layout/activity_edit_display_details">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edit_profile_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_text"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:src="@drawable/plus"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toStartOf="@id/edit_display_name"


                    />

                <EditText
                    android:id="@+id/edit_display_name"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@id/profile_image"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="0dp"
                    android:ems="10"
                    android:hint="@string/hint_display_name"
                    android:inputType="textWebEditText"
                    android:textSize="20sp"
                    android:layout_toStartOf="@id/profile_image"/>
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/bio_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_bio"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_bio"
                style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="211dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/bio_hint"
                android:inputType="textWebEditText"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:gravity="top|left"
                />

        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/saveChanges"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/save_changes"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>